--- a/profile.html
+++ b/profile.html
@@ -41,6 +41,8 @@
                     Being sorounded by friends and family is the best feeling ever am experiencing
                     <br><br>
                     Loving Technology is my passion
+                    <br> <br>
+                    By chance we meet ,by choice we become friends
 
 
                 </p>
