--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     
 
 </head>
-<body>
+<body style="background-image: url(images/IMG3.jpg);">
     <div class="image">
-         <img src="images/IMG1.jpg" alt="uu"> 
+         
     </div>
     </header>
     <nav>
