--- a/profile.html
+++ b/profile.html
@@ -36,7 +36,7 @@
                 <p>BEAUTIFUL FAMILY </p>
                 <img style="width: 300px; height: 300px; float: left;" src="images/sweet.JPG" alt="">
                 <img style="width: 300px;height:300px; float: right;" src="images/honey.JPG" alt="">
-                <p>  My name is Nakintu Joan. A a student at Bugema Unviversty <br>, percing a Bachelor Degree in Information Technology
+                <p>  My name is Nakintu Joan. A a student at Bugema Unviversty <br>, pursing a Bachelor Degree in Information Technology
                 <br><br>
                     Being sorounded by friends and family is the best feeling ever am experiencing
                     <br><br>
