--- a/index.html
+++ b/index.html
@@ -20,13 +20,8 @@
                 <a href="index.html">HOME</a>
             </li>
         <li>
-            <a href="gallery .html"> IMAGES</a>
+            <a href="gallery .html"> gallery</a>
         </li>
-        <li>
-            <a href="profile.html">PROFILE</a>
-        </li>
-
-       
         <li> 
             <a href="userinfor.html"> CONTACT FORM</a>
         </li>
