--- a/userinfor.html
+++ b/userinfor.html
@@ -19,10 +19,7 @@
             <a href="index.html">HOME</a>
         </li>
     <li>
-        <a href="gallery .html"> IMAGES</a>
-    </li>
-    <li>
-        <a href="profile.html"> PROFILE</a>
+        <a href="gallery .html"> GALLERY</a>
     </li>
     
    
